# multi

./: README.md  flake.nix
client/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.svelte  Game.svelte  Help.svelte  app.css  draw.ts  main.ts
client/src/shared/: Game.ts
server/: .gitignore  Cargo.nix  Cargo.toml  README.md
server/src/: card.rs  main.rs  messages.rs  room.rs  server_state.rs  util.rs
