[package]
name = "multi"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.26"
tungstenite = "0.26"
